--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,27 +10,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.2",
+    "clsx": "^2.1.1",
+    "date-fns": "^2.30.0",
+    "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.20.1",
-    "axios": "^1.6.2",
-    "recharts": "^2.8.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.48.2",
-    "lucide-react": "^0.344.0",
-    "clsx": "^2.0.0",
-    "date-fns": "^2.30.0"
+    "react-router-dom": "^6.20.1",
+    "recharts": "^2.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.18",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.5.3",
     "vite": "^5.4.2"
   }
